--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -99,4 +99,14 @@ h1{
     font-size: 40px;
     font-family: 'Fuggles', cursive;
     text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
     }
+
+    button{
+
+      background-color:white;
+      border-radius: 50%;
+      
+      }
